--- a/app/static/style/style.css
+++ b/app/static/style/style.css
@@ -175,7 +175,7 @@ footer p {
   padding: 0;
   width: 100%;
   height: 100vh;
-  background: url(me.jpg) no-repeat center/cover;
+  background: url(../images/me.jpg) no-repeat center/cover;
   background-size: cover;
   position: relative;
   overflow-y: hidden;
@@ -192,7 +192,7 @@ footer p {
 
 #header-text h2,
 #header-text p {
-  font-family: 'PT Sans', sans-serif;:
+  font-family: 'PT Sans', sans-serif;
 }
 
 #header-text h1 {
