--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,47 +1,9 @@
-<!DOCTYPE html>
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>Navbar</title>
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
-  integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
-  <link rel = "stylesheet" type = "text/css" href = "style.css" />
-  <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,600">
-  <link href="https://fonts.googleapis.com/css?family=PT+Sans">
-  <link href="https://fonts.googleapis.com/css?family=Quicksand:500" rel="stylesheet">
-  <script src="https://code.jquery.com/jquery-3.2.1.js">
-  </script>
-</head>
-<body>
+{% extends "base.html" %}
 
-  <!-- Header and Navbar -->
-  <div id="Homepage-header">
-    <header>
-      <nav class="navbar">
-        <div class="logo">Soccer Polls</div>
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Polls</a></li>
-          <li><a href="#">Admin</a></li>
-          <li><a id="active" href="#">Login</a></li>
-        </ul>
-        <button class="navbar-toggle">
-          <span></span>
-        </button>
-      </nav>
-    </header>
-    <div id="header-text">
-      <h1>Soccer Polls.</h1>
-      <h2>Your home to polls based on your favorite sport: SOCCER.</h2>
-      <p class="mobile-hide">
-        Soccer Polls is the best place for you to create polls and vote on polls
-        based on your favorite soccer topics.
-      </p>
-    </div>
-  </div>
+{% block content %}
 
-  <!-- Polls section -->
-  <section class="content-polls-users light-background">
+
+<section class="content-polls-users light-background">
     <div class="content grid-2 center">
       <div class="vertical-line">
         <h2 class="content-head">
@@ -93,13 +55,5 @@
     </div>
   </section>
 
-  <footer>
-    <p id="demo">  </p>
-    <p id="demo2">  </p>
-  </footer>
-
-  <script src="main.js">
-  </script>
-
-</body>
-</html>
+ 
+{% endblock %}
