--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -26,7 +26,7 @@
                     {% if current_user.is_anonymous %}
                     <li><a id="active" href="{{ url_for('login') }}">Login</a></li>
                     {% else %}
-                    <a href="{{ url_for('logout') }}">Logout</a>
+                    <a id="active" href="{{ url_for('logout') }}">Logout</a>
                     {% endif %}
 
                 </ul>
