new pages/added units tests/ updated models

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -21,14 +21,14 @@
                 <div class="logo">Soccer Polls</div>
                 <ul>
                     <li><a href="{{ url_for('index') }}">Home</a></li>
-                    <li><a href="#">Polls</a></li>
-                    {% if current_user.is_admin %}
-                    <li><a href="#">Admin</a></li>
-                    {% endif %}
+                    <li><a href="{{ url_for('polls') }}">Polls</a></li>
+                    {% if current_user.admin %}
+                        <li><a href="{{ url_for('admin') }}">Admin</a></li>
+                    {% endif%}
                     {% if current_user.is_anonymous %}
                     <li><a id="active" href="{{ url_for('login') }}">Login</a></li>
-                    {% else %}
-                    <a id="active" href="{{ url_for('logout') }}">Logout</a>
+                    {% else %}    
+                        <a id="active" href="{{ url_for('logout') }}">Logout</a>
                     {% endif %}
 
                 </ul>
