new migration for models, prior to prepopulation

--- a/app/templates/polls.html
+++ b/app/templates/polls.html
@@ -47,7 +47,7 @@
                 </tr>
             </thead>
             <tbody>
-                {% for poll in Poll %}
+                {% for poll in Polls %}
                 <tr id={{ Poll.id }}>
                     <td class="column">{{ poll.id }} </td>
                     <td class="column">{{ poll.creator }} </td>
