working player delete/add

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -17,7 +17,7 @@
           a poll of your own, Login below and get creative!
           Right poll was for predictions of the 2010 World Cup Winner
         </p>
-        <a href="#" class="button"> View Polls </a>
+        <a href="{{ url_for('polllist') }}" class="button"> View Polls </a>
       </div>
 
       <div>
@@ -31,7 +31,7 @@
           a poll of your own, Login below and get creative!
           Right poll was for predictions of the 2010 World Cup Winner
         </p>
-        <a href="#" class="button"> Login </a>
+        <a href="{{ url_for('login') }}" class="button"> Login </a>
       </div>
     </div>
   </section>
