--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -21,6 +21,7 @@
                 <ul>
                     <li><a href="{{ url_for('index') }}">Home</a></li>
                     <li><a href="{{ url_for('polllist') }}">Polls</a></li>
+                    <li><a href="{{ url_for('playerlist') }}">Players</a></li>
                     {% if current_user.admin %}
                         <li><a href="{{ url_for('admin') }}">Admin</a></li>
                     {% endif%}
