--- a/app/templates/base2.html
+++ b/app/templates/base2.html
@@ -22,6 +22,7 @@
             <ul class="navbar-not-home">
                 <li><a href="{{ url_for('index') }}">Home</a></li>
                 <li><a href="{{ url_for('polllist') }}">Polls</a></li>
+                <li><a href="{{ url_for('playerlist') }}">Players</a></li>
                 {% if current_user.admin %}
                 <li><a href="{{ url_for('admin') }}">Admin</a></li>
                 {% endif%}
