--- a/app/templates/pollori.html
+++ b/app/templates/pollori.html
@@ -2,39 +2,22 @@
 
 {% block content %}
 
-
-<div class="container-table100">
-    <!-- <div class="wrap-table100"> -->
-    <div class="table100">
-        <table>
-            <thead>
-                <tr class="table100-head">
-                    <th class="column">Poll ID</th>
-                    <th class="column">Player Name</th>
-                    <th class="column">Votes</th>
-                    <th class="column"></th>
-
-                </tr>
-            </thead>
-            <tbody>
-                {% for entry in votes %}
-                <tr id= entri >
-                    <td class="column">{{ entry.playerid }} </td>
-                    <td class="column">{{ entry.playerentry.playername }} </td>
-                    <td class="column">{{ entry.votecount }} </td>
-                    <td class="column"><a href="#" class="button">View Poll </a></td>
-                    <!-- <td class="column">  <a href="#" class="button"> Vote on Poll </a></td> -->
-
-                    <!-- <td class="column">iPhone X 64Gb Grey</td>
-                                        <td class="column">$999.00</td>
-                                        <td class="column">1</td>
-                                        <td class="column">$999.00</td> -->
-                </tr>
-                {% endfor %}
-        </table>
-    </div>
-    <!-- </div> -->
-</div>
+<div class="form-wrapper2">
+        <form class="form">
+          <div class="form-container">
+            <h2 class="register-head">Submit your vote below!</h2>
+            {% for entry in votes %}
+            <input type="radio" name="option" value="{{entry.playerentry.playerid}}">{{ entry.playerentry.playername }}<br>
+            {% endfor %}
+            <br>
+            <label class="register-para" for="other"><b>Other</b></label>
+            <input type="text" placeholder="Name" name="Name">
+            <input type="text" placeholder="Country" name="Country">
+            <input type="text" placeholder="Club" name="Club">
+            <button type="submit" class="form-button">Submit Response</button>
+          </div>
+        </form>
+      </div>
 
 
 {% endblock %}
