--- a/app/templates/pollcreate.html
+++ b/app/templates/pollcreate.html
@@ -1,7 +1,7 @@
 {% extends "base2.html" %}
 
 {% block content %}
-
+<!--
 <div class="form-wrapper">
     <h2 class="login-header">Poll Creation</h2>
 
@@ -30,7 +30,36 @@
         </div>
     </form>
 </div>
+-->
 
+<div class="form-wrapper">
+    <form class="form" action="" method="post" onsubmit="return validateForm(this)">
+        <div class="form-container">
+            <h1 class="register-head">Create New Poll</h1>
+            <p class="register-para">Please fill in this form to create a new poll.</p>
+            <hr>
+            {{ form.hidden_tag() }}
+            {% for error in form.pollname.errors %}
+            <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
+            <label class="register-para" for="username"><b>{{ form.pollname.label }}</b></label><br>
+            {{ form.pollname(size=32) }}<br>
+
+            {% for error in form.player1.errors %}
+            <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
+            <label class="register-para" for="pollname"><b>{{ form.player1.label }}</b></label><br>
+            {{ form.player1(size=32) }}<br>
+            <hr>
+            <button type="submit" class="form-button">{{ form.submit() }}</button>
+        </div>
+        {% if current_user.is_anonymous %}
+        <div class="form-bottom">
+            <p class="register-para">Don't have an account? <a href="{{ url_for('register') }}">Register now</a>.</p>
+        </div>
+        {%endif%}
+    </form>
+</div>
 
 {% endblock %}
 
