--- a/style.css
+++ b/style.css
@@ -1,10 +1,3 @@
-:root {
-  --headercolour: rgba(21, 324, 442, 0 );
-  /* --colourchange: rgba(153, 204, 255, 0.98 ); */
-  --colourchange: rgba(0, 0, 0, 0.75);
-  --redbutton: #E2472F;
-}
-
 *, *::before, *::after {
   box-sizing: border-box;
 }
@@ -12,7 +5,6 @@
 body {
 	margin: 0;
   padding: 0;
-  /* font-family: 'Work Sans', sans-serif; */
   font-family: 'PT Sans', sans-serif;
   font-weight: 400;
   background-color: #fff;
@@ -32,6 +24,13 @@ body {
   padding: 4rem 1rem;
 }
 
+.content2 {
+  max-width: 960px;
+  margin: auto;
+  overflow: hidden;
+  padding: 7rem 1rem;
+}
+
 .grid-2 {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -48,8 +47,18 @@ body {
   color: #333;
 }
 
+.blue-background {
+  background: #f6fbfe;
+  color: #333;
+}
+
 .green-background {
   background-color: #FDFAE5;
+  color: #333;
+}
+
+.fade-background {
+  background: linear-gradient(45deg, #BBFF33, #FF3333);
   color: #333;
 }
 
@@ -68,14 +77,6 @@ body {
   background: #c5c5c5;
   margin-left: 3rem;
   margin-top: 2rem;
-}
-
-.content-polls-users img {
-  width: 300px;
-  height: 200px;
-  /* display: inline-block;
-  height: 100%;
-  vertical-align: middle; */
 }
 
 .content-polls-users p,
@@ -104,7 +105,7 @@ body {
    color: white;
    font-size: 16px;
    padding: 12px 30px;
-   background-color: var(--redbutton);
+   background-color: #E2472F;
    margin: 1rem;
  }
 
@@ -187,22 +188,21 @@ nav {
 nav ul {
   line-height: 50px;
   list-style: none;
-  background: var(--headercolour);
+  background: rgba(21, 324, 442, 0 );
   overflow: hidden;
   color: white;
   text-align: right;
   margin: 0;
   padding-right: 40px;
-  transition: 0.3s;
+  /* transition: 0.3s; */
 }
 
 .navbar-not-home {
-  background: var(--colourchange);
+  background: rgba(0, 0, 0, 0.75);
 }
 
 nav.colourchange ul {
-  background: var(--colourchange);
-  /* background: black; */
+  background: rgba(0, 0, 0, 0.75);
 }
 
 nav ul li {
@@ -238,7 +238,7 @@ nav ul li a:hover::before {
 
 nav ul li a#active,
 nav ul li a#active:hover {
-  background: var(--redbutton);
+  background: #E2472F;
 }
 
 nav .navbar-toggle {
@@ -251,20 +251,19 @@ nav ul li a:hover {
 
 /* Navbar/header code ends */
 
-
 /* login and register form styling */
 
 .form-wrapper {
   margin: 12rem 22rem;
 }
 
-.form-wrapper2 {
-  margin: 0 10rem;
-  margin-bottom: 10rem;
-}
-
 .form {
   border: 3px solid #f1f1f1;
+}
+
+.form2 {
+  border: 2px solid #c5c5c5 !important;
+  margin-right: 1rem;
 }
 
 .login-header {
@@ -315,6 +314,16 @@ nav ul li a:hover {
   display: inline-block;
   border: none;
   background: #f1f1f1;
+  font-size: 11px;
+}
+
+.form input[type=radio] {
+  /* padding: 15px; */
+  margin: 5px 0 17px 0;
+}
+
+.form2 input[type=text] {
+  background: #c5c5c5;
 }
 
 .form input[type=text]:focus,
@@ -328,17 +337,25 @@ hr {
   margin-bottom: 25px;
 }
 
+.form-wrapper2 h2 {
+  font-size: 24px;
+}
+
 /* table styling  */
 
 .table-container {
-  width: 100%;
-  min-height: 70vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: 10rem 0;
-  flex-wrap: wrap;
-  padding: 5rem 5rem;
+  margin: 15rem 5rem;
+}
+
+.table-container3 {
+  max-width: 960px;
+  margin: auto;
+  overflow: hidden;
+  padding: 10rem 5rem;
+}
+
+.fix-size {
+  min-width: 161px;
 }
 
 .table-content {
@@ -370,6 +387,8 @@ hr {
 
 .table-content tbody tr {
   border-bottom: 1px solid #dddddd;
+  background-color: white;
+
 }
 
 .table-content tbody tr:nth-of-type(even) {
@@ -391,18 +410,22 @@ hr {
 
 .table-container2 {
   width: 100%;
-  /* min-height: 70vh; */
   display: flex;
   align-items: center;
   justify-content: center;
   margin: 4rem 0;
-  flex-wrap: wrap;
-  /* padding: 5rem 5rem; */
+}
+
+.chart-container {
+  display: flex !important;
+  align-items: center !important;
+  justify-content: center !important;
+  margin: 4rem 0rem !important;
 }
 
 .table-content2 {
   border-collapse: collapse;
-  font-size: 0.9em;
+  font-size: 0.8em;
   border-radius: 0.5rem;
   overflow: hidden;
   box-shadow: 0 0 25px rgba(0, 0, 0, 0.2);
@@ -440,7 +463,7 @@ hr {
 }
 
 .otherbtn{
-  margin: 1rem;
+  margin: 2rem;
   width: auto;
   padding: 10px 18px;
   background-color: #E2472F;
@@ -452,8 +475,15 @@ hr {
 
 /* table styling finish  */
 
+.height {
+  min-height: 100vh;
+  max-width: 960px;
+  margin: auto;
+  overflow: hidden;
+}
+
 .viewpoll-spacing {
-  padding: 7rem 0;
+  padding: 4rem 2rem 2rem 2rem;
 }
 
 .chart-container{
@@ -461,7 +491,7 @@ hr {
    /* width:500px; */
    height: 300px !important;
    width: 400px !important;
-
+   text-align: center !important;
 }
 
 @media screen and (max-width: 1165px) {
@@ -473,6 +503,48 @@ hr {
 @media screen and (max-width: 935px) {
   #header-text {
     padding-left: 27rem;
+  }
+
+  .form-wrapper2 h2 {
+    font-size: 18px;
+  }
+
+  .form-wrapper2 {
+    font-size: 13px;
+  }
+
+  .form2 input[type=text] {
+    font-size: 9px;
+    padding: 12px;
+    margin: 5px 0 12px 0;
+  }
+
+  .form2 input[type=radio] {
+    margin: 5px 0 12px 0;
+  }
+
+  .chart-container{
+     height: 250px !important;
+     width: 320px !important;
+  }
+
+  .table-content2 {
+    font-size: 0.7em;
+    max-width: 300px;
+    margin-top: 1rem;
+  }
+
+  .table-content2 thead tr {
+      height: 3rem;
+  }
+
+  .table-content2 tbody tr {
+    height: 2rem;
+  }
+
+  .table-content2 th,
+  .table-content2 td {
+    padding: 10px 12px;
   }
 }
 
@@ -489,14 +561,12 @@ hr {
     width: 100%;
     padding-top: 60px;
     padding-right: 0;
-    /* text-align: right; */
     font-weight: 500;
     height: auto;
     max-height: 0;
     line-height: 36px;
-    /* height: 100vh; */
     overflow: hidden;
-    transition: all ease-in-out 0.3s;
+    /* transition: all ease-in-out 0.3s; */
   }
 
   nav ul.open {
@@ -535,7 +605,6 @@ hr {
     right: 20px;
     background-color: transparent;
     color: white;
-    /* border: 3px solid white; */
     border: none;
     outline: none;
     padding: 0 5px;
@@ -563,7 +632,6 @@ hr {
   }
 
   nav .navbar-toggle.open-navbar-toggle span {
-    /* transform: rotate(90deg); */
     background-color: transparent;
   }
 
@@ -590,6 +658,10 @@ hr {
   .form-wrapper {
     margin: 12rem 6rem;
   }
+
+  .table-container {
+    margin: 15rem 2rem;
+  }
 }
 
 @media screen and (max-width: 603px) {
@@ -597,9 +669,38 @@ hr {
     margin: 12rem 3rem;
   }
 
+  .form2 {
+    margin: 3rem 3rem 2rem 3rem;
+  }
+
+  .content2 {
+    padding: 4rem 1rem;
+  }
+
+  .height {
+    height: 120%;
+  }
+
+  .chart-container {
+    margin: 4rem 5rem !important;
+  }
+
+  .table-container3 {
+    padding: 10rem 1rem;
+    overflow-x: scroll;
+  }
+
+  .table-container {
+    margin: 15rem 1rem;
+    overflow-x: scroll;
+  }
+
+  .table-container2 {
+    margin: 2rem 0;
+  }
+
   nav ul {
     line-height: 20px;
-    /* padding-top: 50px; */
   }
 
   nav ul li a {
@@ -635,7 +736,7 @@ hr {
   }
 
   .content {
-    padding: 1.5rem;
+    padding: 2.5rem;
   }
 
   .grid-2 {
@@ -656,7 +757,33 @@ hr {
   }
 }
 
+@media screen and (max-width: 551px) {
+  .chart-container {
+    margin: 3rem 3rem !important;
+  }
+
+  .table-container2 {
+    margin-top: 0rem;
+  }
+}
+
+@media screen and (max-width: 468px) {
+  .table-container,
+  .table-container3,
+  footer {
+    font-size: 0.8em;
+  }
+
+  .chart-container{
+    margin: 3rem 1rem !important;
+  }
+}
+
 @media screen and (max-width: 422px) {
+  .chart-container{
+    margin: 3rem 0rem !important;
+  }
+
   #header-text {
     padding-left: 12rem;
   }
@@ -675,11 +802,39 @@ hr {
   .login-header {
     font-size: 17px;
   }
-
 }
 
 
 @media screen and (max-width: 400px) {
+  .chart-container{
+     height: 220px !important;
+     width: 240px !important;
+     margin: 3rem 1.5rem !important;
+  }
+
+  .table-content2 {
+    font-size: 0.7em;
+    max-width: 200px;
+    margin-top: 1rem;
+  }
+
+  .table-content2 thead tr {
+      height: 2rem;
+  }
+
+  .table-content2 tbody tr {
+    height: 1.4rem;
+  }
+
+  .table-content2 th,
+  .table-content2 td {
+    padding: 8px 10px;
+  }
+
+  .height {
+    height: 110%;
+  }
+
   .logo {
     font-size: 15px;
     letter-spacing: 2px;
@@ -723,6 +878,10 @@ hr {
 @media screen and (max-width: 384px) {
   #header-text {
     padding-left: 10rem;
+  }
+
+  footer {
+    font-size: 0.7em;
   }
 }
 
@@ -768,251 +927,3 @@ hr {
     padding-left: 7rem;
   }
 }
-
-/*
-.content {
-  line-height: 30 px;
-  max-width: 1180px;
-  text-align: center;
-  margin: 3em auto;
-  padding: 0 3rem;
-}
-
-.section{
-  padding: 2rem 0;
-}
-
-.content-main {
-  background-color: #252529;
-  color: white;
-  max-width: 1180px;
-  text-align: center;
-  margin: 0 auto;
-  padding: 0 3rem;
-  height: 100%;
-  overflow: hidden;
-}
-
-.content-main p {
-  padding-bottom: 2rem;
-}
-
-
-.content-polls p {
-  font-size: 14px;
-  text-align: left;
-}
-
-.content-head {
-  font-size: 2rem;
- }
-
-.content-polls {
-  display: grid;
-  grid-gap: 20px;
-  grid-template-columns: 1fr 1fr;
-}
-
-
-.content-polls img {
-  width: 300px;
-  height: 200px;
-  display: inline-block;
-  height: 100%;
-  vertical-align: middle;
-} */
-
-/* .sv-row {
-    position: relative;
-    min-height: 1px;
-    padding-left: 10rem;
-    padding-right: 10rem;
-    margin: 15rem 10rem;
-
-}
-
-.sv-panel-primary {
-    border-color: #e5e6e5;
-}
-
-.sv-panel {
-    margin-bottom: 20px;
-    background-color: #fff;
-    border: 1px solid #e5e6e5;
-    border-radius: 4px;
-    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
-
-}
-
-.sv-panel-primary > .sv-panel-heading {
-    color: #fff;
-    background-color: #002F5F;
-    border-color: #e5e6e5;
-}
-
-.sv-panel-heading {
-    padding: 13px 15px 10px 15px;
-    border-bottom: 1px solid transparent;
-    border-top-right-radius: 3px;
-    border-top-left-radius: 3px;
-}
-
-.sv-panel-title {
-    margin-top: 0;
-    margin-bottom: 0;
-    font-size: 24px;
-    color: inherit;
-}
-
-h2 {
-    display: block;
-    margin-block-start: 0.83em;
-    margin-block-end: 0.83em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    font-weight: 500;
-    line-height: 1.1;
-}
-
-.sv-panel-body {
-    padding: 12px;
-}
-
-table {
-    background-color: transparent;
-    border-collapse: collapse;
-    border-spacing: 0;
-    width: 100%;
-    max-width: 100%;
-    margin-bottom: 12px;
-    font-size: 14px;
-}
-
-tbody {
-    display: table-row-group;
-    vertical-align: middle;
-    border-color: inherit;
-}
-
-tr {
-    display: table-row;
-    vertical-align: inherit;
-    border-color: inherit;
-}
-
-.sv-table > thead > tr > th,
-.sv-table > tbody > tr > th,
-.sv-table > thead > tr > td,
-.sv-table > tbody > tr > td,
-.sv-table > tfoot > tr > td {
-    padding: 8px;
-    line-height: 1.42857143;
-    vertical-align: top;
-    border-top: 1px solid #e5e6e5;
-}
-
-.sitsrowhead {
-    text-align: right;
-} */
-
-/*
-.container-table100 {
-  width: 100%;
-  min-height: 100vh;
-   background: linear-gradient(45deg, #4158d0, #c850c0);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  padding: 6rem 6rem;
-} */
-
-
-
-/* .wrap-table100 {
-  width: 1170px;
-}
-
-table {
-  border-spacing: 1;
-  border-collapse: collapse;
-  background: white;
-  border-radius: 1rem;
-  overflow: hidden;
-  /* width: 100%; */
-  /* margin: 0 auto; */
-  /* position: relative; */
-  /* text-align: left; */
-  /* border: 1px solid black; */
-
-
-/*
-table th {
-  border: 1px solid #f1f1f1;
-} */
-
-/* table td, table th {
-  padding-left: 8px;
-}
-
-table thead tr {
-  height: 4rem;
-  background: #36304a;
-}
-
-table tbody tr {
-  height: 3rem;
-}
-/* table tbody tr:last-child {
-  border: 0;
-} */
-
-/* table td, table th {
-  text-align: left;
-} */
-/* table td.l, table th.l {
-  text-align: right;
-}
-table td.c, table th.c {
-  text-align: center;
-}
-table td.r, table th.r {
-  text-align: center;
-}
-
-
-.table100-head th{
-  font-family: OpenSans-Regular;
-  font-size: 18px;
-  color: #fff;
-  line-height: 1.2;
-  font-weight: unset;
-}
-
-/* tbody tr:nth-child(even) {
-  background-color: #f5f5f5;
-}
-
-tbody tr {
-  font-family: OpenSans-Regular;
-  font-size: 15px;
-  color: #808080;
-  line-height: 1.2;
-  font-weight: unset;
-}
-
-tbody tr:hover {
-  color: #555555;
-  background-color: #f5f5f5;
-  cursor: pointer;
-}
-
-.column {
-  padding: 20px 20px;
-  width: 250px;
-}
-
-.column2 {
-  padding: 20px 10px;
-  width: 350px;
-} */
