edit voting forms, created usercreate page

--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -15,12 +15,12 @@
             {% for user in users %}
             <tr id=user.id>
                 <td>{{ user.id }} </td>
-                <td>{{ user.username }}</td>
-                <td>{{ user.email }}</td>
-                <td><a href="{{ url_for('deluser', userid=user.id) }}" class="tablebtn">Delete User </a></td>
+                <td class="fix-size">{{ user.username }}</td>
+                <td class="fix-size">{{ user.email }}</td>
+                <td class="fix-size"><a href="{{ url_for('deluser', userid=user.id) }}" class="tablebtn">Delete User </a></td>
             </tr>
             {% endfor %}
     </table>
-    <a href="" class="otherbtn">Create New User </a>
+    <a href="{{ url_for('usercreate')}}" class="otherbtn">Create New User </a>
 </div>
 {% endblock %}
