--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -27,7 +27,7 @@
                 {{ form.password(size=32) }}<br>
             </p>
             <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
-            <p>{{ form.submit() }}</p>
+            <button class="form-button" type="submit"><p>{{ form.submit() }}</p></button>
         </div>
 
         <div class="form-bottom">
