--- a/style.css
+++ b/style.css
@@ -486,6 +486,11 @@ hr {
   padding: 4rem 2rem 2rem 2rem;
 }
 
+.viewpoll-spacing2 {
+  padding: 2rem 2rem 0 2rem;
+}
+
+
 .chart-container{
    /* height:400px; */
    /* width:500px; */
